--- a/Style.css
+++ b/Style.css
@@ -69,5 +69,8 @@
 }
 
 //*-------------------------------*//
-
-.
+.ad p {
+	font-size : 16px;
+	color : #ffffff;
+}
+//*-------------------------------*//
