--- a/Style.css
+++ b/Style.css
@@ -58,14 +58,14 @@
 	margin-left:40px;
 }
 .a .container table {
-	font-size : 18px
+	font-size : 18px;
 }
 //*-------------------------------*//
 
 .btn-xxl {
 	font-size: 35px;
 	text-align:center;
-	margin-left:475
+	margin-left:475;
 }
 
 //*-------------------------------*//
