--- a/Style.css
+++ b/Style.css
@@ -69,8 +69,8 @@
 }
 
 //*-------------------------------*//
-.ad {
+.ad .container {
 	font-size : 16px;
-	color : #ffffff;
+	color: white;
 }
 //*-------------------------------*//
