--- a/Style.css
+++ b/Style.css
@@ -38,6 +38,10 @@
 .b .container  p {
 	font-size:16px;
 }
+.b .conatiner h4 {
+	font-size :16px;
+	color:#ffffff;
+}
 //*-------------------------------*//
 
 .a .container {
