--- a/Style.css
+++ b/Style.css
@@ -34,15 +34,12 @@
 
 .b .container  span {
 	font-size:14px;
+	text-align:center;
 }
 .b .container  p {
 	font-size:16px;
 }
-.b .conatiner h4 {
-	font-size :16px;
-	color:#ffffff;
-	font-weight:normal;
-}
+
 //*-------------------------------*//
 
 .a .container {
@@ -73,9 +70,4 @@
 	margin-left:475;
 }
 
-//*-------------------------------*//
-.ad .container {
-	font-size : 16px;
-	color: white;
-}
 //*-------------------------------*//
